--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,7 @@ Pillow==10.0.0
 scikit-learn==1.3.0
 pandas==2.0.3
 kociemba==1.2.1
-streamlit==1.28.1 
+streamlit==1.28.1
+flask==2.3.3
+flask-cors==4.0.0
+watchdog==3.0.0 
